--- a/platforms/ios/www/templates/workouts/build.html
+++ b/platforms/ios/www/templates/workouts/build.html
@@ -14,9 +14,8 @@
 		</div>
 	</div>
 
-	<button class="button button-block button-assertive" ng-click="finish()">
+	<button class="button button-block button-assertive finish-workout" ng-click="finish()">
 		Finish Workout
 	</button>
-
   </ion-content>
 </ion-view>
