--- a/platforms/ios/www/templates/home.html
+++ b/platforms/ios/www/templates/home.html
@@ -3,6 +3,6 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <a href="#/app/build_workout">New Workout</a>
+    <a href="#/app/select_routine">New Workout</a>
   </ion-content>
 </ion-view>
